--- a/tp-final/package.json
+++ b/tp-final/package.json
@@ -1,21 +1,46 @@
 {
   "name": "tp-final",
   "version": "1.0.0",
-  "main": "App.js",
-  "scripts": {
+  "main": "index.js",  "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.36",
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/material-top-tabs": "^7.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "expo": "~52.0.27",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "^0.76.7"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-tab-view": "^4.0.5",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.20.0",
+    "@react-native-community/cli": "^15.1.3",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "metro-config": "^0.81.1",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
