--- a/tp-final/package.json
+++ b/tp-final/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tp-final",
   "version": "1.0.0",
-  "main": "index.js",  "scripts": {
+  "main": "index.js",
+  "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -19,7 +20,7 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
