--- a/tp-final/package.json
+++ b/tp-final/package.json
@@ -15,16 +15,20 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.27",
     "expo-status-bar": "~2.0.1",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "^3.17.0",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-image": "~2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
