--- a/tp-final/package.json
+++ b/tp-final/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.27",
+    "expo-image": "~2.0.6",
     "expo-status-bar": "~2.0.1",
+    "express": "^4.21.2",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
@@ -27,8 +29,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "~0.19.13",
-    "expo-image": "~2.0.6"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
